# lora-lab

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
.claude/agents/: code-reviewer.md  doc-writer.md  experiment-runner.md  math-tutor.md
configs/: qwen_0.5b_base_lora.yaml  qwen_0.5b_lora.yaml
docs/: README.md  journal.md
docs/decisions/: 0001-use-uv-and-makefile.md  0002-cpu-only-plain-lora.md  0003-loss-masking.md  0004-eval-harness.md  0005-seed-study.md  0006-rank-sweep.md  0007-rank-allocation.md  0008-non-instruct-base.md  0009-mechanism-probe.md  0010-datasize-study.md  0011-qlora-math-thread.md
docs/math/: 01-lora-derivation.md  02-rank-and-alpha.md  03-loss-masking.md  04-qlora-quantization.md
experiments/: log.md
src/: __init__.py  allocation.py  data.py  datasize.py  eval.py  infer.py  mechanism.py  merge.py  quant.py  quant_demo.py  study.py  sweep.py  train.py
tests/: test_allocation.py  test_datasize.py  test_eval.py  test_masking.py  test_quant.py  test_study.py  test_sweep.py
